--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -1,30 +1,16 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:aapt="http://schemas.android.com/aapt"
-    android:width="108dp"
-    android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
-    <path android:pathData="M31,63.928c0,0 6.4,-11 12.1,-13.1c7.2,-2.6 26,-1.4 26,-1.4l38.1,38.1L107,108.928l-32,-1L31,63.928z">
-        <aapt:attr name="android:fillColor">
-            <gradient
-                android:endX="85.84757"
-                android:endY="92.4963"
-                android:startX="42.9492"
-                android:startY="49.59793"
-                android:type="linear">
-                <item
-                    android:color="#44000000"
-                    android:offset="0.0" />
-                <item
-                    android:color="#00000000"
-                    android:offset="1.0" />
-            </gradient>
-        </aapt:attr>
-    </path>
-    <path
-        android:fillColor="#FFFFFF"
-        android:fillType="nonZero"
-        android:pathData="M65.3,45.828l3.8,-6.6c0.2,-0.4 0.1,-0.9 -0.3,-1.1c-0.4,-0.2 -0.9,-0.1 -1.1,0.3l-3.9,6.7c-6.3,-2.8 -13.4,-2.8 -19.7,0l-3.9,-6.7c-0.2,-0.4 -0.7,-0.5 -1.1,-0.3C38.8,38.328 38.7,38.828 38.9,39.228l3.8,6.6C36.2,49.428 31.7,56.028 31,63.928h46C76.3,56.028 71.8,49.428 65.3,45.828zM43.4,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2c-0.3,-0.7 -0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C45.3,56.528 44.5,57.328 43.4,57.328L43.4,57.328zM64.6,57.328c-0.8,0 -1.5,-0.5 -1.8,-1.2s-0.1,-1.5 0.4,-2.1c0.5,-0.5 1.4,-0.7 2.1,-0.4c0.7,0.3 1.2,1 1.2,1.8C66.5,56.528 65.6,57.328 64.6,57.328L64.6,57.328z"
-        android:strokeWidth="1"
-        android:strokeColor="#00000000" />
+    android:width="24dp"
+    android:height="24dp"
+    android:viewportWidth="960"
+    android:viewportHeight="960">
+    <group
+        android:pivotX="480"
+        android:pivotY="480"
+        android:rotation="-90"
+        android:scaleX="0.45"
+        android:scaleY="0.45">
+        <path
+            android:fillColor="@android:color/white"
+            android:pathData="M440,876L244,680L40,680L40,600L276,600L414,737L414,737Q414,737 414,737Q414,737 414,737L355,620L800,620Q817,620 828.5,631.5Q840,643 840,660Q840,677 828.5,688.5Q817,700 800,700L485,700L491,712Q508,747 501.5,784.5Q495,822 468,849L440,876ZM40,360L40,280L224,280L268,235Q285,218 307,209Q329,200 353,200L760,200Q777,200 788.5,211.5Q800,223 800,240Q800,257 788.5,268.5Q777,280 760,280L353,280Q345,280 338,283.5Q331,287 325,292L256,360L40,360ZM40,480L40,480L40,480L40,480L40,480L40,480Q40,480 40,480Q40,480 40,480L40,480L40,480L40,480L40,480Q40,480 40,480Q40,480 40,480ZM560,560L560,480L880,480Q897,480 908.5,491.5Q920,503 920,520Q920,537 908.5,548.5Q897,560 880,560L560,560ZM560,420L560,340L840,340Q857,340 868.5,351.5Q880,363 880,380Q880,397 868.5,408.5Q857,420 840,420L560,420Z"/>
+    </group>
 </vector>
